--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <link rel="icon" type="image/svg+xml" href="/logo-no-bg.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aavash Tamang || Portfolio</title>
+    <style>
+      body {
+        background-color: #000011;
+        margin: 0;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
